refactor: `getCustomizeTimeBoxes()` 내부 로직 리팩터링